Добавлены шрифты и стили для заголовков и подзаголовков секций

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital@1&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+    </main>
     <footer></footer>    
 </body>
 </html>
