Добавлен блок партнеры

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 <body>
     <header></header>
     <main>
+        <section class="partners">
+            <div class="container">
+                <ul class="list list_partners">
+                    <li class="list__item">
+                        <img src="source/img/partners/envato.png" alt="">
+                    </li>
+                    <li class="list__item">
+                        <img src="source/img/partners/wordpress.png" alt="">
+                    </li>
+                    <li class="list__item">
+                        <img src="source/img/partners/aetuts.png" alt="">
+                    </li>
+                    <li class="list__item">
+                        <img src="source/img/partners/microlancer.png" alt="">
+                    </li>
+                </ul>
+            </div>            
+        </section>
     </main>
     <footer></footer>    
 </body>
