--- a/index.html
+++ b/index.html
@@ -11,6 +11,46 @@
 <body>
     <header></header>
     <main>
+        <section class="container about-us">
+            <h2 class="title-section about-title-section">About us
+                <span class="subtitle-section">Proin iaculis purus consequat sem cure</span>
+            </h2>
+            <ul class="list about-list">
+                <li class="about-item">
+                    <div class="about-item-text">
+                        <h3 class="about-item-text-title">july 2010
+                            <span class="about-item-text-subtitle">Our Humble Beginnings</span>
+                        </h3>
+                        <p>Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt. Proin 
+                        iaculis purus consequat sem cure digni 
+                        ssim. Donec porttitora entum suscipit
+                        </p>
+                    </div>
+                    <div class="about-item-img">
+                    <img src="source/img/about/about-1.jpg" alt="about-1">
+                    </div>
+                </li>
+                <li class="about-item">
+                    <div class="about-item-text">
+                        <h3 class="about-item-text-title">january 2011
+                            <span class="about-item-text-subtitle">Facing Startup Battles</span>
+                        </h3>
+                        <p>Proin iaculis purus consequat sem cure 
+                            digni ssim. Donec porttitora entum suscipit 
+                            aenean rhoncus posuere odio in tincidunt. Proin 
+                            iaculis purus consequat sem cure digni 
+                            ssim. Donec porttitora entum suscipit aenean 
+                            rhoncus posuere odio in tincidunt.
+                        </p>
+                    </div>
+                    <div class="about-item-img">
+                    <img src="source/img/about/about-2.jpg" alt="about-2">
+                    </div>
+                </li>
+            </ul>
+        </section>
         <section class="partners">
             <div class="container">
                 <ul class="list list_partners">
@@ -27,7 +67,7 @@
                         <img src="source/img/partners/microlancer.png" alt="">
                     </li>
                 </ul>
-            </div>            
+            </div>
         </section>
     </main>
     <footer></footer>    
