Section Services added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
 <body>
     <header></header>
     <main>
+
+<section class="services">
+  <div class="main-container">
+    <h2 class="title-section"> Services </h2>
+    <h3 class="subtitle-section"> Proin iaculis purus consequat sem cure. </h3>
+
+    <div class="service-items">
+      <div class="service-item">
+        <img class="service-img" src="source/img/service-1.jpg" alt="иконка комерции">
+        <p class="service-item-name"> E-Commerce </p>
+        <p class="service-item-text"> Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+      </div>
+
+      <div class="service-item">
+        <img class="service-img" src="source/img/service-2.jpg" alt="иконка отзывчивого веба">
+        <p class="service-item-name"> Responsive Web </p>
+        <p class="service-item-text"> Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+      </div>
+
+      <div class="service-item">
+        <img class="service-img" src="source/img/service-3.jpg" alt="иконка охраняемого веба">
+        <p class="service-item-name"> Web Security</p>
+        <p class="service-item-text"> Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+      </div>
+
+    </div>
+    <!---service-items-->
+  </div>
+  <!---main-container-->
+</section>
+
         <section class="partners">
             <div class="container">
                 <ul class="list list_partners">
@@ -29,6 +60,7 @@
                 </ul>
             </div>            
         </section>
+
     </main>
     <footer></footer>    
 </body>
