добавила блок about-us

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <header></header>
     <main>
-        <section class="container about-us">
-            <h2 class="title-section about-title-section">About us
-                <span class="subtitle-section">Proin iaculis purus consequat sem cure</span>
-            </h2>
+        <section class="about-us">
+            <h2 class="title-section about-title-section">About us</h2>
+            <span class="subtitle-section">Proin iaculis purus consequat sem cure</span>
+            <div class="container about-container">
             <ul class="list about-list">
                 <li class="about-item">
                     <div class="about-item-text">
                         <h3 class="about-item-text-title">july 2010
-                            <span class="about-item-text-subtitle">Our Humble Beginnings</span>
+                        <span class="about-item-text-subtitle">Our Humble Beginnings</span>
                         </h3>
                         <p>Proin iaculis purus consequat sem cure 
                         digni ssim. Donec porttitora entum suscipit 
@@ -29,7 +29,7 @@
                         </p>
                     </div>
                     <div class="about-item-img">
-                    <img src="source/img/about/about-1.jpg" alt="about-1">
+                        <img class="about-image" src="source/img/about/about-1.jpg" alt="about-1">
                     </div>
                 </li>
                 <li class="about-item">
@@ -46,10 +46,49 @@
                         </p>
                     </div>
                     <div class="about-item-img">
-                    <img src="source/img/about/about-2.jpg" alt="about-2">
+                        <img class="about-image" src="source/img/about/about-2.jpg" alt="about-2">
+                    </div>
+                </li>
+                <li class="about-item">
+                    <div class="about-item-text">
+                        <h3 class="about-item-text-title">july 2010
+                        <span class="about-item-text-subtitle">Our Humble Beginnings</span>
+                        </h3>
+                        <p>Proin iaculis purus consequat sem cure 
+                        digni ssim. Donec porttitora entum suscipit 
+                        aenean rhoncus posuere odio in tincidunt. Proin 
+                        iaculis purus consequat sem cure digni 
+                        ssim. Donec porttitora entum suscipit
+                        </p>
+                    </div>
+                    <div class="about-item-img">
+                        <img class="about-image" src="source/img/about/about-3.jpg" alt="about-3">
+                    </div>
+                </li>
+                <li class="about-item">
+                    <div class="about-item-text">
+                        <h3 class="about-item-text-title">january 2011
+                            <span class="about-item-text-subtitle">Facing Startup Battles</span>
+                        </h3>
+                        <p>Proin iaculis purus consequat sem cure 
+                            digni ssim. Donec porttitora entum suscipit 
+                            aenean rhoncus posuere odio in tincidunt. Proin 
+                            iaculis purus consequat sem cure digni 
+                            ssim. Donec porttitora entum suscipit aenean 
+                            rhoncus posuere odio in tincidunt.
+                        </p>
+                    </div>
+                    <div class="about-item-img">
+                        <img class="about-image" src="source/img/about/about-4.jpg" alt="about-4">
+                    </div>
+                </li>
+                <li class="about-item">
+                    <div class="about-image">
+                        our story continues ...
                     </div>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="partners">
             <div class="container">
